--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">Confer</a>
+                <a href="index.html" class="navbar-brand">ANPROFOR</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
-                        <a href="feature.html" class="nav-item nav-link">Feature</a>
-                        <a href="advisor.html" class="nav-item nav-link">Advisor</a>
-                        <a href="review.html" class="nav-item nav-link">Review</a>
+                        <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                        <a href="about.html" class="nav-item nav-link">Información</a>
+                        <a href="service.html" class="nav-item nav-link">Conferencistas</a>
+                        <a href="feature.html" class="nav-item nav-link">Cronograma</a>
+                        <a href="advisor.html" class="nav-item nav-link">Alianzas</a>
+                        <a href="review.html" class="nav-item nav-link">Registrate Aquí</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu">
@@ -97,9 +97,9 @@
                             <img src="img/carousel-1.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Fastest Way to Achieve Success</h1>
+                            <h1>II SEMINARIO ONLINE DE CIENCIAS FORENSES</h1>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus ut mollis mauris. Vivamus egestas eleifend dui ac consequat at lectus in malesuada
+                                09 octubre, 2021
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn" href=""><i class="fa fa-link"></i>Get Started</a>
@@ -112,7 +112,7 @@
                             <img src="img/carousel-2.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Your Success Our Achievement</h1>
+                            <h1>II Seminario online de Ciencias Forenses</h1>
                             <p>
                                 Morbi sagittis turpis id suscipit feugiat. Suspendisse eu augue urna. Morbi sagittis, orci sodales varius fermentum, tortor
                             </p>
