--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
-                        <a href="about.html" class="nav-item nav-link">Información</a>
+                        <a href="#about" class="nav-item nav-link active">Información</a>
+            
                         <a href="service.html" class="nav-item nav-link">Conferencistas</a>
                         <a href="feature.html" class="nav-item nav-link">Cronograma</a>
                         <a href="advisor.html" class="nav-item nav-link">Alianzas</a>
