--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         
 
         <!-- About Start -->
+        <div id="about">
         <div class="about">
             <div class="container">
                 <div class="row align-items-center">
