--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
-                        <a href="#about" class="nav-item nav-link active">Información</a>
-            
-                        <a href="service.html" class="nav-item nav-link">Conferencistas</a>
+                        <a href="#service" class="nav-item nav-link">Información</a>
+                        <a href="#about" class="nav-item nav-link active">Conferencistas</a>            
                         <a href="feature.html" class="nav-item nav-link">Cronograma</a>
                         <a href="advisor.html" class="nav-item nav-link">Alianzas</a>
                         <a href="review.html" class="nav-item nav-link">Registrate Aquí</a>
@@ -187,15 +186,18 @@
                     </div>
                     <div class="col-md-6">
                         <div class="section-header">
-                            <p>Learn About Us</p>
-                            <h2>25 Years Experience</h2>
+                            <p>Información</p>
+                            <h2>ANPROFOR</h2>
                         </div>
                         <div class="about-text">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                                La Asociación Nacional de Profesionales Forenses de Guatemala les invita a este gran evento en modalidad online, va dirigido a todos los amantes de la investigación y prevención criminal, contamos con ponentes reconocidos y apasionados por lo que hacen.
                             </p>
+                            <h2>INCLUYE</h2>
+
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
+                                - Diploma digital de participación, el cual se enviará cinco días después del evento
+                                - El enlace para ingresar a este evento se estará enviando un día antes al correo proporcionado a la hora de registrarse.
                             </p>
                             <a class="btn" href="">Learn More</a>
                         </div>
@@ -207,94 +209,38 @@
 
 
         <!-- Service Start -->
+        <div id="service">    
         <div class="service">
             <div class="container">
                 <div class="section-header">
-                    <p>Consulting Services</p>
-                    <h2>Our Best Consulting Services</h2>
+                    <p>ANPROFOR</p>
+                    <h2>Información</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-1.png" alt="Icon">
-                            <h3>Business Strategy</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-2.png" alt="Icon">
-                            <h3>Project Management</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-3.png" alt="Icon">
-                            <h3>Market Research</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
+                      <div class="col-lg-3 col-md-6">
                         <div class="service-item">
                             <img src="img/icon-4.png" alt="Icon">
-                            <h3>Human Resource</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-5.png" alt="Icon">
-                            <h3>Online Business</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
+                            <h3>ANPROFOR</h3>
+                            <p align="justify">La Asociación Nacional de Profesionales Forenses de Guatemala les invita a este gran evento en modalidad online, va dirigido a todos los amantes de la investigación y prevención criminal, contamos con ponentes reconocidos y apasionados por lo que hacen. </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item">
                             <img src="img/icon-6.png" alt="Icon">
-                            <h3>Capital Management</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
+                            <h3>INCLUYE</h3>
+                            <p align="justify">- Diploma digital de participación, el cual se enviará cinco días después del evento</p>  
+                            <p align="justify">- El enlace para ingresar a este evento se estará enviando un día antes al correo proporcionado a la hora de registrarse. </P>
+                       </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6">
                         <div class="service-item">
-                            <img src="img/icon-7.png" alt="Icon">
-                            <h3>Business Insurance</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
+                            <img src="img/icon-1.png" alt="Icon">
+                            <h3>FECHA Y HORA</h3>
+                            p align="justify">09 Octubre 2021<br> Hora de Guatemala:<br> 10:00am a 16:00hrs</p>
+                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-8.png" alt="Icon">
-                            <h3>Online Marketing</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                </div>
+
+               </div>
             </div>
         </div>
         <!-- Service End -->
