--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
                             <div class="text">
                                 <i class="fa fa-phone-alt"></i>
                                 <h2>+123 456 7890</h2>
-                                <p>For Appointment</p>
+                                <p>Guatemala</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="top-bar-right">
                             <div class="social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href="https://twitter.com/anprofor"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.facebook.com/ANPROFOR"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/anproforguate/?hl=es-la"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/channel/UCfqZQnPlhWZi7AgSQhDTgJA"><i class="fa fa-youtube-play"></i></a>
                             </div>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                         <div class="service-item">
                             <img src="img/icon-1.png" alt="Icon">
                             <h3>FECHA Y HORA</h3>
-                            p align="justify">09 Octubre 2021<br> Hora de Guatemala:<br> 10:00am a 16:00hrs</p>
+                            <p align="justify">09 Octubre 2021<br> Hora de Guatemala:<br> 10:00am a 16:00hrs</p>
                          </div>
                     </div>
 
@@ -350,18 +350,48 @@
         <div class="team">
             <div class="container">
                 <div class="section-header">
-                    <p>Meet Our Advisors</p>
-                    <h2>Our Professional Consulting Team</h2>
+                    <p>ANPROFOR</p>
+                    <h2>Conferencistas</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-1.jpg" alt="Team Image">
+                                <img src="img/flei.png" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Donald John</h2>
-                                <p>Founder & CEO</p>
+                                <h2>Fleyder Melendez</h2>
+                                <p>Investigador Criminal y Analista </p>
+                                <div class="team-social">
+                                    <a href="https://www.facebook.com/fleyder.man.5"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="">Biografía</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/karol.png" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>María Karol Lozano Montes</h2>
+                                <p>Abogada analista</p>
+                                <div class="team-social">
+                                    <a href="https://www.facebook.com/kary.lozano.5"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="">Biografía</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/0.jpg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Conferencista 3</h2>
+                                <p>Team</p>
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -374,45 +404,11 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-2.jpg" alt="Team Image">
+                                <img src="img/0.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Adam Phillips</h2>
-                                <p>Chef Executive</p>
-                                <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-3.jpg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>Thomas Olsen</h2>
-                                <p>Chef Advisor</p>
-                                <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-4.jpg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>James Alien</h2>
-                                <p>Advisor</p>
+                                <h2>Conferencista 4</h2>
+                                <p>Team</p>
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
