--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="#service" class="nav-item nav-link">Información</a>
-                        <a href="#about" class="nav-item nav-link active">Conferencistas</a>            
+                        <a href="#team" class="nav-item nav-link active">Conferencistas</a>            
                         <a href="feature.html" class="nav-item nav-link">Cronograma</a>
-                        <a href="advisor.html" class="nav-item nav-link">Alianzas</a>
+                        <a href="#fact" class="nav-item nav-link">Alianzas</a>
+                        <a href="advisor.html" class="nav-item nav-link">A</a>
                         <a href="review.html" class="nav-item nav-link">Registrate Aquí</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -136,31 +137,32 @@
         
         
         <!-- Fact Start -->
+        <div id="fact">    
         <div class="fact">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-6">
                         <div class="fact-item">
-                            <img src="img/icon-4.png" alt="Icon">
-                            <h2>Qualified Team</h2>
+                            <img src="img/inastec.jpg" alt="Icon">
+                            <h2>Grupo INASTEC</h2>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="fact-item">
-                            <img src="img/icon-1.png" alt="Icon">
-                            <h2>Individual Approach</h2>
+                            <img src="img/0.png" alt="Icon">
+                            <h2>team</h2>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="fact-item">
-                            <img src="img/icon-8.png" alt="Icon">
-                            <h2>100% Success</h2>
+                            <img src="img/0.png" alt="Icon">
+                            <h2>team</h2>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="fact-item">
-                            <img src="img/icon-6.png" alt="Icon">
-                            <h2>100% Satisfaction</h2>
+                            <img src="img/0.png" alt="Icon">
+                            <h2>team</h2>
                         </div>
                     </div>
                 </div>
@@ -346,7 +348,8 @@
         <!-- Testimonial End -->
 
 
-        <!-- Team Start -->
+        <!-- Team Start -->        
+        <div id="team">    
         <div class="team">
             <div class="container">
                 <div class="section-header">
