--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <div class="service-item">
                             <img src="img/icon-6.png" alt="Icon">
                             <h3>INCLUYE</h3>
-                            <p align="justify">- Diploma digital de participación, el cual se enviará cinco días después del evento</p>  
+                           <p align="justify">- Diploma digital de participación, el cual se enviará cinco días después del evento</p>  
                             <p align="justify">- El enlace para ingresar a este evento se estará enviando un día antes al correo proporcionado a la hora de registrarse. </P>
                        </div>
                     </div>
@@ -168,30 +168,31 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/flei.png" alt="Team Image">
+                                <img src="img/flei.png" width="100" height="130" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Fleyder Melendez</h2>
                                 <p>Investigador Criminal y Analista </p>
                                 <div class="team-social">
                                     <a href="https://www.facebook.com/fleyder.man.5"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="">Biografía</a>
                                 </div>
+                               <a href="">Biografía</a>
+
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/karol.png" alt="Team Image">
+                                <img src="img/karol.png" width="100" height="130" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>María Karol Lozano Montes</h2>
                                 <p>Abogada analista</p>
                                 <div class="team-social">
                                     <a href="https://www.facebook.com/kary.lozano.5"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="">Biografía</a>
                                 </div>
+                                   <a href="">Biografía</a>
                             </div>
                         </div>
                     </div>
