--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="#service" class="nav-item nav-link">Información</a>
                         <a href="#team" class="nav-item nav-link active">Conferencistas</a>            
-                        <a href="#testimonial" class="nav-item nav-link">Cronograma</a>
+                        <a href="#schedule" class="nav-item nav-link">Cronograma</a>
                         <a href="#fact" class="nav-item nav-link">Alianzas</a>
                         <a href="https://forms.gle/E5fcGQL8rdZUNspV6" class="nav-item nav-link">Registrate Aquí</a>
                     </div>     
@@ -358,7 +358,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-6">
                         <div class="fact-item">
-                            <img src="img/inastec.jpg" width="100" height="100" alt="Icon">
+                            <img src="img/inastec.jpg" width="100" height="100">
                             <h2>Grupo INASTEC</h2>
                         </div>
                     </div>
