--- a/index.html
+++ b/index.html
@@ -395,25 +395,20 @@
                             <div class="col-md-6">
                                 <div class="footer-contact">
                                     <h2>ANPROFOR</h2>
-                                    <p><i class="fa fa-map-marker-alt"></i>Asociación Nacional de Profesionales Forenses</p>
-                                    <p><i class="fa fa-phone-alt"></i>Huehuetenango, Guatemala</p>
-                                    <div class="footer-social">
-                                        <a href=""><i class="fab fa-twitter"></i></a>
-                                        <a href=""><i class="fab fa-facebook-f"></i></a>
-                                        <a href=""><i class="fab fa-youtube"></i></a>
-                                        <a href=""><i class="fab fa-instagram"></i></a>
-                                        <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
+                                    <p>Asociación Nacional de Profesionales Forenses</p>
+                                    <p><i class="fa fa-map-marker-alt"></i>Huehuetenango, Guatemala</p>
+                                    
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="footer-link">
                                     <h2>Redes Sociales</h2>
-                                    <a href=""> </a>
-                                    <a href=""> </a>
-                                    <a href=""> </a>
-                                    <a href=""> </a>
-                                    <a href=""> </a>
+                                    <div class="footer-social">
+                                         <a href="https://twitter.com/anprofor"><i class="fab fa-twitter"></i></a>
+                                        <a href="https://www.facebook.com/ANPROFOR"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.instagram.com/anproforguate/?hl=es-la"><i class="fab fa-instagram"></i></a>
+                                        <a href="https://www.youtube.com/channel/UCfqZQnPlhWZi7AgSQhDTgJA"><i class="fa fa-youtube-play"></i></a>
+                                     </div>
                                 </div>
                             </div>
                         </div>
@@ -421,7 +416,7 @@
                     <div class="col-lg-5">
                         <div class="footer-newsletter">
                             <h2>Contacto e informes</h2>
-                           <p><i class="fa fa-envelope"></i>anproforguatemala@gmail.com</p>                           
+                           <p><i class="fa fa-envelope"></i>  anproforguatemala@gmail.com</p>                           
                         </div>
                     </div>
                 </div>
