--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
                 <div class="section-header">
                     <p>ANPROFOR</p>
                     <h2>Conferencistas</h2>
+                     <p>Al hacer click encima del nombre podrás acceder a la biografía de cada conferencista</p>
+
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
@@ -171,12 +173,11 @@
                                 <img src="img/flei.png" width="100" height="250" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Fleyder Melendez</h2>
+                                <a href="fleider.html"><h2>Fleyder Melendez</h2></a>
                                 <p>Investigador Criminal y Analista </p>
                                 <div class="team-social">
                                     <a href="https://www.facebook.com/fleyder.man.5"><i class="fab fa-facebook-f"></i></a>
                                 </div>
-                               <a href="">Biografía</a>
 
                             </div>
                         </div>
@@ -187,12 +188,11 @@
                                 <img src="img/karol.png" width="100" height="250" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>María Karol Lozano Montes</h2>
+                                <a href="karol.html"><h2>María Karol Lozano Montes</h2></a>
                                 <p>Abogada analista</p>
                                 <div class="team-social">
                                     <a href="https://www.facebook.com/kary.lozano.5"><i class="fab fa-facebook-f"></i></a>
                                 </div>
-                                   <a href="">Biografía</a>
                             </div>
                         </div>
                     </div>
