--- a/karol.html
+++ b/karol.html
@@ -72,53 +72,13 @@
         <!-- Nav Bar End -->
 
 
-        <!-- Carousel Start -->
-        <div class="carousel">
-            <div class="container-fluid">
-                <div class="owl-carousel">
-                    <div class="carousel-item">
-                        <div class="carousel-img">
-                            <img src="img/huehue.jpg" alt="Image">
-                        </div>
-                        <div class="carousel-text">
-                            <h1>II SEMINARIO ONLINE DE CIENCIAS FORENSES</h1>
-                            <p>
-                                09 octubre, 2021
-                            </p>
-                            <div class="carousel-btn">
-                                <a class="btn" href="https://forms.gle/E5fcGQL8rdZUNspV6"><i class="fa fa-link"></i>Registrate aquí</a>
-                            </div>
-                        </div>
-                    </div>
-                 </div>
-        </div>
-        <!-- Carousel End -->
-
-        <!-- Video Modal Start-->
-        <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>        
-                        <!-- 16:9 aspect ratio -->
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always" allow="autoplay"></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> 
-        <!-- Video Modal End -->
-        
              <!-- Feature Start -->
         <div class="feature">
             <div class="container">
                 <div class="row align-items-end">
                     <div class="col-md-6">
                         <div class="feature-img">
-                            <img src="img/karol.jpg" alt="Image">
+                            <img src="img/karol.png" alt="Image">
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -129,35 +89,6 @@
                         <p>
                          Abogada, egresada de la Universidad Jorge Tadeo Lozano de Bogotá, con estudios en derechos humanos y delitos contra la administración pública. Experiencia como defensora en procesos de violencia intrafamiliar. Actualmente desarrolla programas de investigación y análisis en múltiples temas del derecho, donde se incluye la problemática social de desplazamiento y conflicto armado. Así mismo, hace parte del grupo INASTEC (Investigación, Asesoría Técnica y Tecnología) en Colombia, realizando actividades de asesoría y representación jurídica en procesos penales.   
                         </p>
-                        <div class="row counters">
-                            <div class="col-6">
-                                <i class="fa fa-user"></i>
-                                <div class="counters-text">
-                                    <h2 data-toggle="counter-up">100</h2>
-                                    <p>Our Staffs</p>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <i class="fa fa-users"></i>
-                                <div class="counters-text">
-                                    <h2 data-toggle="counter-up">200</h2>
-                                    <p>Our Clients</p>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <i class="fa fa-check"></i>
-                                <div class="counters-text">
-                                    <h2 data-toggle="counter-up">300</h2>
-                                    <p>Completed Projects</p>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <i class="fa fa-running"></i>
-                                <div class="counters-text">
-                                    <h2 data-toggle="counter-up">400</h2>
-                                    <p>Running Projects</p>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
