--- a/karol.html
+++ b/karol.html
@@ -94,8 +94,7 @@
                          Abogada, egresada de la Universidad Jorge Tadeo Lozano de Bogotá, con estudios en derechos humanos y delitos contra la administración pública. 
                 Experiencia como defensora en procesos de violencia intrafamiliar. 
                 <br>
-                <br>Actualmente desarrolla programas de investigación y análisis en múltiples temas del derecho, donde se incluye la problemática social de desplazamiento y conflicto armado. 
-                <br>Así mismo, hace parte del grupo INASTEC (Investigación, Asesoría Técnica y Tecnología) en Colombia, realizando actividades de asesoría y representación jurídica en procesos penales.   
+                <br>Actualmente desarrolla programas de investigación y análisis en múltiples temas del derecho, donde se incluye la problemática social de desplazamiento y conflicto armado. Así mismo, hace parte del grupo INASTEC (Investigación, Asesoría Técnica y Tecnología) en Colombia, realizando actividades de asesoría y representación jurídica en procesos penales.   
                         </p>
                         </div>
                     </div>
