--- a/karol.html
+++ b/karol.html
@@ -85,7 +85,9 @@
                         <div class="section-header">
                             <p>Colombia</p>
                             <h2>María Karol Lozano Montes</h2>
+                            <div class="social">
                            <a href="https://www.facebook.com/kary.lozano.5"><i class="fa fa-facebook-f"></i></a>
+                            </div>    
                         </div>
                         
             <p align="justify">
