--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               <div class="col-md-2"><time>10:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/0.png" alt="Hubert Hirthe">
+                  <img src="img/0.png" alt=" ">
                 </div>
                 <h4>Tema 1<br><span>Conferencista 1</span></h4>
                 <p>Investigador Criminal y Analista</p>
@@ -274,7 +274,7 @@
               <div class="col-md-2"><time>11:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/0.png" alt="Hubert Hirthe">
+                  <img src="img/0.png" alt=" ">
                 </div>
                 <h4>Tema 2<br><span>Conferencista 2</span></h4>
                 <p>----</p>
@@ -285,7 +285,7 @@
               <div class="col-md-2"><time>12:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/0.png" alt="Hubert Hirthe">
+                  <img src="img/0.png" alt=" ">
                 </div>
                 <h4>Tema 3<br><span>Conferencista 3</span></h4>
                 <p>----</p>
@@ -296,7 +296,7 @@
               <div class="col-md-2"><time>13:00 HRS</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/0.png" alt="@jav">
+                  <img src="img/0.png" alt=" ">
                 </div>
                 <h4>Tema 4<br><span>Conferencista 4</span></h4>
                 <p>Perito en Arte Forense</p>
@@ -307,7 +307,7 @@
               <div class="col-md-2"><time>14:00 HRS</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/0.png" alt="@jav">
+                  <img src="img/0.png" alt=" ">
                 </div>
                 <h4>Tema 5<br><span>Conferencista 5</span></h4>
                 <p>---</p>
@@ -318,7 +318,7 @@
               <div class="col-md-2"><time>15:00 HRS</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/selvin.png" alt="@jav">
+                  <img src="img/0.png" alt=" ">
                 </div>
                 <h4>Tema 6<br><span>Conferencista 6</span></h4>
                 <p>----</p>
