--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-md-8">
                         <div class="top-bar-left">
                             <div class="text">
-                                <h2><a href="t.me/anprofor">Telegram: t.me/anprofor </a></h2>
+                                <h2><a href="https://t.me/anprofor">Telegram: t.me/anprofor </a></h2>
                             </div>
                             <div class="text">
                                 <p>Guatemala</p>
