--- a/index.html
+++ b/index.html
@@ -202,13 +202,10 @@
                                 <img src="img/0.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Conferencista 3</h2>
-                                <p>Team</p>
+                                <a href="selvin.html"><h2>Selvin Coyoy</h2></a>
+                                <p>Abogado y Notario</p>
                                 <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/selvin.coyoy"><i class="fab fa-facebook-f"></i></a>                                    
                                 </div>
                             </div>
                         </div>
