--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/0.jpg" alt="Team Image">
+                                <img src="img/selvin.png" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <a href="selvin.html"><h2>Selvin Coyoy</h2></a>
