--- a/index.html
+++ b/index.html
@@ -213,16 +213,14 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/0.jpg" alt="Team Image">
+                                <img src="img/Alejandra.jpg" width="100" height="250" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Conferencista 4</h2>
-                                <p>Team</p>
+                                <a href="alejandra.html"><h2>María Alejandra de León de Ovalle </h2></a>
+                                <p>Doctora en Derecho</p>
                                 <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href="https://twitter.com/aledeovalle"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.facebook.com/alejandra.deovalle"><i class="fab fa-facebook-f"></i></a>                                   
                                 </div>
                             </div>
                         </div>
