--- a/alejandra.html
+++ b/alejandra.html
@@ -78,7 +78,7 @@
                 <div class="row align-items-end">
                     <div class="col-md-6">
                         <div class="feature-img">
-                            <img src="img/alejandra.jpg" alt="Image">
+                            <img src="img/Alejandra.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="col-md-6">
