--- a/index.html
+++ b/index.html
@@ -314,10 +314,11 @@
               <div class="col-md-2"><time>15:00 HRS</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/0.png" alt=" ">
+                  <img src="img/Alejandra.jpg" alt=" ">
                 </div>
-                <h4>Tema 6<br><span>Conferencista 6</span></h4>
-                <p>----</p>
+                <h4>El sistema de Notariado Latino y las nuevas tecnologías,
+ para la prevención del crimen organizado<br><span>María Alejandra de León de Ovalle</span></h4>
+                <p>Doctora en Derecho</p>
               </div>
             </div>
                         
