--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             </div>
                             <div class="team-text">
                                 <a href="jackie.html"><h2>Jackie Agustín</h2></a>
-                                <p>Licencia en Criminología y Criminalística</p>
+                                <p>Licenciada en Criminología y Criminalística</p>
                                 <div class="team-social">
                                     <a href="https://twitter.com/Jackielunazul"><i class="fab fa-twitter"></i></a>
                                     <a href="https://www.facebook.com/jackie.agustin"><i class="fab fa-facebook-f"></i></a>                                    
