--- a/jackie.html
+++ b/jackie.html
@@ -100,9 +100,8 @@
               <br>- Periodista independiente
               <br>- Investigadora 
               <br>- Conferencista 
-              <br>- Diversos diplomados en la rama de periodismo y ciencias forences.
-                         ------------------   
-                        </p>
+              <br>- Diversos diplomados en la rama de periodismo y ciencias forenses
+            </p>
                         </div>
                     </div>
                 </div>
