--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
               <div class="col-md-2"><time>13:00 HRS</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/0.png" alt=" ">
+                  <img src="img/karol.png" alt=" ">
                 </div>
-                <h4>Tema 4<br><span>Conferencista 4</span></h4>
-                <p>Perito en Arte Forense</p>
+                <h4>El enfoque de género en el delito de violencia intrafamiliar<br><span>María Karol Lozano Montes</span></h4>
+                <p>Abogada analista</p>
               </div>
             </div>
             
@@ -327,10 +327,10 @@
               <div class="col-md-2"><time>14:00 HRS</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/0.png" alt=" ">
+                  <img src="img/flei.png" alt=" ">
                 </div>
-                <h4>Tema 5<br><span>Conferencista 5</span></h4>
-                <p>---</p>
+                <h4>El rol de la mujer en el crimen organizado<br><span>Fleyder Melendez</span></h4>
+                <p>Investigador Criminal y Analista</p>
               </div>
             </div>
             
