--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                  
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="img/ius.png" class="img-fluid" alt="">
+              <img src="img/citalan.jpg" class="img-fluid" alt="">
             </div>
           </div>
           
