--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 <div class="speaker">
                   <img src="img/0.png" alt=" ">
                 </div>
-                <h4>Presentación del libro DDHH 4ta. Generación del Instituto de Postgrados del CUNOC-USAC a cargo del Licenciado Ignacio Camey <br><span>Presentación del libro DDHH 4ta. Generación</span></h4>
+                <h4>Presentación del libro DDHH 4ta. Generación del Instituto de Investigaciones del Departamento de Postgrados CUNOC-USAC a cargo del Licenciado Ignacio Camey <br><span>Presentación del libro DDHH 4ta. Generación</span></h4>
                 <p> </p>
               </div>
             </div>
