--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <div class="speaker">
                   <img src="img/selvin.png" alt=" ">
                 </div>
-                <h4>El deber de investigar violaciones a DDHH en la justicia transicional a la luz de la jurisprudencia de la corte IDH<br><span>Selvin Coyoy</span></h4>
+                <h4>El deber de investigar violaciones a Derechos Humanos en la justicia transicional a la luz de la jurisprudencia de la corte IDH<br><span>Selvin Coyoy</span></h4>
                 <p>Abogado y Notario</p>
               </div>
             </div>
@@ -338,9 +338,9 @@
               <div class="col-md-2"><time>16:00 HRS</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/0.png" alt=" ">
+                  <img src="img/libro.jpg" alt=" ">
                 </div>
-                <h4>Presentación del libro DDHH 4ta. Generación del Instituto de Investigaciones del Departamento de Postgrados CUNOC-USAC a cargo del Licenciado Ignacio Camey <br><span>Presentación del libro DDHH 4ta. Generación</span></h4>
+                <h4>Presentación del libro Derechos Humanos de última generación del Instituto de Investigaciones del Departamento de Postgrados CUNOC-USAC a cargo del Licenciado Ignacio Camey <br><span>Presentación del libro DDHH 4ta. Generación</span></h4>
                 <p> </p>
               </div>
             </div>
