--- a/karol.html
+++ b/karol.html
@@ -78,7 +78,7 @@
                 <div class="row align-items-end">
                     <div class="col-md-6">
                         <div class="feature-img">
-                            <img src="img/karol.png" alt="Image">
+                            <img src="img/karol.png" width="250" height="300" alt="Image">
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -89,6 +89,7 @@
                            <a href="https://www.facebook.com/kary.lozano.5"><i class="fa fa-facebook-f"></i></a>
                             </div>    
                         </div>
+                     </div>   
                         
             <p align="justify">
                          Abogada, egresada de la Universidad Jorge Tadeo Lozano de Bogotá, con estudios en derechos humanos y delitos contra la administración pública. 
