--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 09 octubre, 2021
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn" href="https://forms.gle/E5fcGQL8rdZUNspV6"><i class="fa fa-link"></i>Registrate aquí</a>
+                                <a class="btn" href="https://forms.gle/fPssScJ8TZvYKjWs8"><i class="fa fa-link"></i>Confirma tu asistencia aquí</a>
                             </div>
                         </div>
                     </div>
