--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn" href="https://forms.gle/fPssScJ8TZvYKjWs8"><i class="fa fa-link"></i>Confirma tu asistencia aquí</a>
-                                <a href="https://www.youtube.com/watch?v=m8Lzxc7WG0g"><a class="btn btn-play" data-toggle="modal">Youtube</a></a>
+                                <a class="btn btn-play" data-toggle="modal"><a href="https://www.youtube.com/watch?v=m8Lzxc7WG0g">Youtube</a>
 
                             </div>
                         </div>
