--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn" href="https://forms.gle/fPssScJ8TZvYKjWs8"><i class="fa fa-link"></i>Confirma tu asistencia aquí</a>
-                                <a class="btn btn-play" data-toggle="modal"><a href="https://www.youtube.com/watch?v=m8Lzxc7WG0g">Youtube</a>
+                                <a class="btn btn-play" data-toggle="modal"><a href="https://www.youtube.com/watch?v=m8Lzxc7WG0g">En vivo en Youtube</a></a>
+                                <a class="btn btn-play" data-toggle="modal"><a href="https://www.facebook.com/ANPROFOR/videos/575393300460829">En vivo en Facebook</a></a>
+                                <a class="btn btn-play" data-toggle="modal"><a href="https://twitter.com/anprofor">En vivo en Twitter</a></a>
+                                
+
 
                             </div>
                         </div>
